# hyperbolica

./: .gitignore  LICENSE  README.md  landing.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: main.py
blog/: post1_why_hyperbolic.md  post2_terrain_generation.md  post3_tilings_and_money.md
docs/: index.html  sales-pack.md
hyperbolica/: __init__.py  core.py  terrain.py  tiling.py
src/hyperbolica/: __init__.py  cli.py  poincare.py
tests/: test_core.py  test_poincare.py  test_terrain.py  test_tiling.py
