[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperbolica"
version = "0.1.0"
description = "Hyperbolic geometry toolkit — Poincaré disk operations, terrain generation, and tessellations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hyperbolica", email = "hello@hyperbolica.dev" }]
keywords = [
    "hyperbolic-geometry",
    "poincare-disk",
    "non-euclidean",
    "tessellation",
    "procedural-terrain",
    "game-math",
    "computational-geometry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "pydantic>=2.0"]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.urls]
Homepage = "https://hyperbolica.dev"
Documentation = "https://hyperbolica.dev/docs"
Repository = "https://github.com/hyperbolica/hyperbolica"
API = "https://api.hyperbolica.dev"

[project.scripts]
hyperbolica-api = "api.main:app"
